; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Cedar.c_InitCedar.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Cedar.c_InitCedar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@init_cedar_counter = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @InitCedar() #0 {
  %1 = load i32, i32* @init_cedar_counter, align 4
  %2 = add nsw i32 %1, 1
  store i32 %2, i32* @init_cedar_counter, align 4
  %3 = icmp sgt i32 %1, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %8

5:                                                ; preds = %0
  %6 = call i32 (...) @InitProtocol()
  %7 = call i32 (...) @ProtoInit()
  br label %8

8:                                                ; preds = %5, %4
  ret void
}

declare dso_local i32 @InitProtocol(...) #1

declare dso_local i32 @ProtoInit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
